[project]
name = "myblog-third"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "sasakiy84", email = "sasakiy84@g.ecc.u-tokyo.ac.jp" }
]
dependencies = [
    "mkdocs-material>=9.1.17",
    "mkdocs-blogging-plugin>=2.2.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
